<resources>
    <string name="app_name">StreetLight</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_live">Live</string>
    <string name="menu_dataentry">DataEntry</string>
    <string name="menu_alert">Alert Reports</string>
    <string name="menu_burning">Non Burning Reports</string>
    <string name="menu_history">History</string>
    <string name="menu_onoffhistory">ON/OFF History</string>
</resources>