<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_live" />
        <item
            android:id="@+id/nav_dataentry"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_dataentry" />

        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_alert" />

        <item
            android:id="@+id/nav_nonburning"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_burning" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_onoffhistory"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_onoffhistory" />

    </group>
</menu>