<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sosaley.streetlight.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_live"
        android:name="com.sosaley.streetlight.home.view.GalleryFragment"
        android:label="@string/menu_live"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_dataentry"
        android:name="com.sosaley.streetlight.home.view.SlideshowFragment"
        android:label="@string/menu_dataentry"
        tools:layout="@layout/fragment_slideshow" />
</navigation>